# capstone-vc

./: .gitignore  .gitmodules  GEMINI.md  README.md  patch.py  setup_dependencies.sh
.agents/: AGENTS.md
docs/: agentic_reasoning_evaluation.md  (+2 more)
src/custom_bot_gazebo/: CMakeLists.txt  package.xml
src/custom_bot_gazebo/custom_bot_gazebo/: dynamic_rplidar_tf_bridge.py  tf_static_republisher.py
src/custom_bot_gazebo/launch/: sim.launch.py
src/custom_bot_gazebo/models/aws_robomaker_residential_AirconditionerA_01/: model.sdf
src/custom_bot_gazebo/models/aws_robomaker_residential_AirconditionerB_01/: model.sdf
src/custom_bot_gazebo/models/aws_robomaker_residential_BalconyTable_01/: model.sdf
src/custom_bot_gazebo/models/aws_robomaker_residential_Ball_01/: model.sdf
src/custom_bot_gazebo/models/aws_robomaker_residential_Bed_01/: model.sdf
src/custom_bot_gazebo/models/aws_robomaker_residential_Board_01/: model.sdf
src/custom_bot_gazebo/models/aws_robomaker_residential_Carpet_01/: model.sdf
src/custom_bot_gazebo/models/aws_robomaker_residential_ChairA_01/: model.sdf
src/custom_bot_gazebo/models/aws_robomaker_residential_ChairD_01/: model.sdf
src/custom_bot_gazebo/models/aws_robomaker_residential_Chandelier_01/: model.sdf
src/custom_bot_gazebo/models/aws_robomaker_residential_CoffeeTable_01/: model.sdf
src/custom_bot_gazebo/scripts/: convert.py
src/custom_bot_gazebo/test/: test_headless_movement.py
src/custom_bot_gazebo/worlds/: simple_home.world  single_room.world  small_house.world
src/custom_bot_moveit_config/: CMakeLists.txt  package.xml
src/custom_bot_moveit_config/config/: custom_bot.srdf  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ompl_planning.yaml
src/custom_bot_moveit_config/launch/: demo.launch.py  move_group.launch.py
(+121 files in other folders)
